--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-11*",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 798846040,
   "rate": "3.87",
-  "seed": 571061654,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Nov-11*"
 }
