--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 798846040,
+  "date": "2025-Nov-11*",
   "rate": "3.87",
-  "date": "2025-Nov-11*"
+  "seed": 529173087,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
