--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Nov-11*",
-  "rate": "3.87",
-  "seed": 529173087,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 738250627,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.87"
 }
