--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-11*",
-  "seed": 738250627,
+  "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.87"
+  "date": "2025-Nov-11*",
+  "seed": 406945266
 }
