--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1044832013,
   "rate": "3.87",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-11*",
-  "seed": 406945266
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
