--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1510017450,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.87",
-  "date": "2025-Nov-12",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1989519611,
+  "date": "2025-Nov-12"
 }
