--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 433212171,
+  "date": "2025-Nov-12",
   "rate": "3.87",
-  "date": "2025-Nov-12"
+  "seed": 2027964504,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
