--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-12",
   "rate": "3.87",
-  "seed": 2027964504,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Nov-12",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1303099483
 }
