--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
   "date": "2025-Nov-12",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1303099483
+  "rate": "3.87",
+  "seed": 685249708,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
