--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1940675716,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.87",
-  "date": "2025-Nov-12"
+  "date": "2025-Nov-12",
+  "seed": 1288906021
 }
