--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Nov-12",
   "rate": "3.87",
-  "seed": 1026046283,
-  "date": "2025-Nov-12"
+  "seed": 1722456898
 }
