--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
-  "date": "2025-Nov-12",
-  "seed": 1149297775,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1988363838,
+  "date": "2025-Nov-13",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.88"
 }
