--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1988363838,
   "date": "2025-Nov-13",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88"
+  "seed": 1483010151,
+  "rate": "3.88",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
