--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-13",
-  "seed": 1660510760,
-  "rate": "3.88"
+  "seed": 1793420345
 }
