--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1379002201,
   "rate": "3.88",
-  "date": "2025-Nov-13"
+  "seed": 648885725,
+  "date": "2025-Nov-13",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
