--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
   "date": "2025-Nov-13",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 176611110
+  "rate": "3.88",
+  "seed": 807766444,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
