--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": null,
-  "date": "",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 272177910
+  "date": "2025-Nov-14",
+  "rate": "3.88",
+  "seed": 1951947266,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
