--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Nov-14",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.88",
-  "seed": 1951947266,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1277773739
 }
