--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1167983491,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-14",
-  "rate": "3.88"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.88",
+  "seed": 1176184583
 }
