--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.88",
-  "date": "2025-Nov-14",
+  "seed": 1414219337,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2030100187
+  "date": "2025-Nov-14"
 }
