--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Nov-14",
   "rate": "3.88",
-  "seed": 1414219337,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-14"
+  "seed": 1477158724,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
