--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-14",
+  "seed": 965545256,
+  "date": "2025-Nov-17",
   "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 515404117
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
