--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
-  "date": "2025-Nov-17",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1984287671
+  "rate": "3.88",
+  "seed": 889843673,
+  "date": "2025-Nov-17"
 }
