--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-17",
   "rate": "3.88",
-  "seed": 1995547620
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 78463965,
+  "date": "2025-Nov-17"
 }
