--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
-  "seed": 1283213157,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-17"
+  "date": "2025-Nov-17",
+  "seed": 225872979,
+  "rate": "3.88"
 }
