--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-17",
-  "seed": 1561969644,
+  "rate": "3.88",
+  "seed": 808140089,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88"
+  "date": "2025-Nov-18"
 }
