--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 777395917,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.88",
-  "date": "2025-Nov-18"
+  "date": "2025-Nov-18",
+  "seed": 1033287664,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
