--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1777579932,
+  "date": "2025-Nov-18",
+  "seed": 221755224,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88",
-  "date": "2025-Nov-18"
+  "rate": "3.88"
 }
