--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Nov-18",
   "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 329667010,
-  "date": "2025-Nov-18"
+  "seed": 339720955,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
