--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 769635482,
   "rate": "3.88",
-  "date": "2025-Nov-18",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1003418084
+  "date": "2025-Nov-19"
 }
