--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 769635482,
-  "rate": "3.88",
+  "date": "2025-Nov-19",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-19"
+  "rate": "3.88",
+  "seed": 321821044
 }
