--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
   "date": "2025-Nov-19",
+  "seed": 1717147418,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1803906453
+  "rate": "3.88"
 }
