--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
-  "seed": 231028788,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-19",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2029829589,
+  "rate": "3.88"
 }
