--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1859364323,
-  "rate": "3.88",
   "date": "2025-Nov-19",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 645836489,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.88"
 }
