--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-20",
-  "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1120215249
+  "seed": 86784667,
+  "rate": "3.88",
+  "date": "2025-Nov-20"
 }
