--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2001851778,
+  "rate": "3.88",
   "date": "2025-Nov-20",
-  "seed": 1772397578,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
