--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1670890906,
-  "date": "2025-Nov-20",
-  "rate": "3.88"
+  "seed": 687916201,
+  "date": "2025-Nov-20"
 }
