--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88",
-  "seed": 2138138897
+  "date": "2025-Nov-20",
+  "seed": 1749263377,
+  "rate": "3.88"
 }
