--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 160352283,
-  "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-20"
+  "seed": 1605215423,
+  "date": "2025-Nov-20",
+  "rate": "3.88"
 }
