--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-20",
-  "seed": 1211879681,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1309174247,
   "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Nov-21"
 }
