--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1309174247,
+  "date": "2025-Nov-21",
+  "seed": 1811190178,
   "rate": "3.88",
-  "date": "2025-Nov-21"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
