--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Nov-21",
-  "seed": 547195130,
-  "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2055348805,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.88"
 }
