--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-21",
-  "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 888719237
+  "seed": 1254817720,
+  "rate": "3.88",
+  "date": "2025-Nov-21"
 }
