--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Nov-21",
   "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 501814520,
-  "date": "2025-Nov-21"
+  "seed": 107148799,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
