--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.88",
-  "seed": 529059391,
-  "date": "2025-Nov-21",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Nov-24",
+  "seed": 132703602
 }
