--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1861565218,
   "date": "2025-Nov-24",
-  "rate": "3.88",
-  "seed": 1250680973,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.88"
 }
