--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1861565218,
+  "rate": "3.88",
+  "seed": 1823357552,
   "date": "2025-Nov-24",
-  "rate": "3.88"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
