--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1288118407,
   "rate": "3.88",
-  "seed": 1823357552,
-  "date": "2025-Nov-24",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Nov-24"
 }
