--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.88",
-  "seed": 1810435456,
-  "date": "2025-Nov-24"
+  "date": "2025-Nov-24",
+  "seed": 2042670371
 }
