--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
-  "seed": 443658209,
+  "seed": 1388767843,
+  "date": "2025-Nov-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-24"
+  "rate": "3.88"
 }
