--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 828582306,
-  "date": "2025-Nov-24",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Nov-24",
+  "seed": 701932464
 }
