--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.88",
+  "seed": 951211190,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-24",
-  "seed": 313436155,
-  "rate": "3.88"
+  "date": "2025-Nov-24"
 }
