--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Nov-25",
+  "seed": 1284939545,
   "rate": "3.88",
-  "seed": 951211190,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-24"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
