--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-25",
-  "seed": 1284939545,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 225839787,
+  "date": "2025-Nov-25"
 }
