--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.88",
-  "seed": 1329494689,
-  "date": "2025-Nov-25"
+  "date": "2025-Nov-25",
+  "seed": 2062217460,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
