--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1455075749,
-  "rate": "3.88",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-25",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1868852634,
+  "rate": "3.88"
 }
