--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-25",
-  "seed": 701211271,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88"
+  "date": "2025-Nov-25",
+  "rate": "3.88",
+  "seed": 1315455126
 }
