--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-25",
-  "rate": "3.88",
-  "seed": 1315455126
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2113619223,
+  "rate": "3.88"
 }
