--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-25",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2113619223,
-  "rate": "3.88"
+  "rate": "3.88",
+  "date": "2025-Nov-25",
+  "seed": 1317842578
 }
