--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88",
+  "seed": 1014602249,
   "date": "2025-Nov-25",
-  "seed": 1317842578
+  "rate": "3.88"
 }
