--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 56473222,
+  "seed": 372472487,
+  "rate": "3.88",
   "date": "2025-Nov-25",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
