--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-25",
-  "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 374545307
+  "seed": 392948821,
+  "rate": "3.88",
+  "date": "2025-Nov-25"
 }
