--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 392948821,
   "rate": "3.88",
-  "date": "2025-Nov-25"
+  "date": "2025-Nov-25",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 463593725
 }
