--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
-  "date": "2025-Nov-25",
+  "seed": 720502242,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 463593725
+  "rate": "3.88",
+  "date": "2025-Nov-25"
 }
