--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 720502242,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Nov-25",
+  "seed": 2137680622,
   "rate": "3.88",
-  "date": "2025-Nov-25"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
