--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.88",
-  "seed": 310580781,
-  "date": "2025-Nov-25",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 845758963,
+  "date": "2025-Nov-25"
 }
