--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 845758963,
-  "date": "2025-Nov-25"
+  "seed": 561025070,
+  "date": "2025-Nov-25",
+  "rate": "3.88"
 }
