--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1138091699,
+  "date": "2025-Nov-27*",
   "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-25"
+  "seed": 505520961
 }
