--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-27*",
   "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 505520961
+  "seed": 1932709531,
+  "date": "2025-Nov-27*"
 }
