--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1422206668,
-  "rate": "3.88",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-27*"
+  "rate": "3.88",
+  "date": "2025-Nov-27*",
+  "seed": 1612662831
 }
