--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-27*",
-  "seed": 1424111396
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1648653839,
+  "rate": "3.88"
 }
