--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1383358441,
-  "date": "2025-Nov-27*",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.88",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Nov-27*",
+  "seed": 2088882748
 }
