--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 914157634,
   "rate": "3.88",
-  "date": "2025-Nov-27*",
-  "seed": 2088882748
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Nov-27*"
 }
