--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 914157634,
-  "rate": "3.88",
+  "seed": 1989709674,
+  "date": "2025-Nov-27*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-27*"
+  "rate": "3.88"
 }
