--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1989709674,
-  "date": "2025-Nov-27*",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.88"
+  "date": "2025-Nov-28",
+  "rate": "3.89",
+  "seed": 1455081327,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
