--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1219078105,
-  "rate": "3.89"
+  "date": "2025-Nov-28",
+  "rate": "3.89",
+  "seed": 628801119
 }
