--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.89",
+  "date": "2025-Nov-28",
+  "seed": 605592826,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 377692059,
-  "date": "2025-Nov-28"
+  "rate": "3.89"
 }
