--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1501461210,
   "rate": "3.89",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-28"
+  "date": "2025-Nov-28",
+  "seed": 1003357635,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
