--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.89",
-  "date": "2025-Nov-28",
-  "seed": 1003357635,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1958061782,
+  "date": "2025-Nov-28"
 }
