--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 724368046,
+  "rate": "3.89",
+  "seed": 2018258791,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-28",
-  "rate": "3.89"
+  "date": "2025-Nov-28"
 }
