--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 657116844,
   "rate": "3.89",
-  "seed": 1603591096,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-28"
+  "date": "2025-Dec-1",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
