--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1193685287,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1780708944,
-  "rate": "3.89",
-  "date": "2025-Dec-1"
+  "date": "2025-Dec-1",
+  "rate": "3.89"
 }
