--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.89",
-  "seed": 204631355,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-1",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.89",
+  "seed": 765237113
 }
