--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.89",
   "date": "2025-Dec-1",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 576811001
+  "rate": "3.89",
+  "seed": 1908147134,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
