--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Dec-1",
-  "seed": 1833627946,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89"
+  "rate": "3.89",
+  "seed": 1944026567,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
