--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 454386722,
-  "date": "2025-Dec-1",
+  "rate": "3.89",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89"
+  "seed": 232845389,
+  "date": "2025-Dec-1"
 }
