--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.89",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 232845389,
-  "date": "2025-Dec-1"
+  "seed": 1430950683,
+  "date": "2025-Dec-2",
+  "rate": "3.89"
 }
