--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1430950683,
+  "rate": "3.89",
   "date": "2025-Dec-2",
-  "rate": "3.89"
+  "seed": 905927623,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
