--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1871643731,
   "rate": "3.89",
-  "date": "2025-Dec-2",
-  "seed": 905927623,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-2"
 }
