--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1871643731,
+  "date": "2025-Dec-2",
   "rate": "3.89",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-2"
+  "seed": 571402034
 }
