--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.89",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1540561257,
   "date": "2025-Dec-2",
-  "seed": 512001883
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
