--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 446107279,
   "date": "2025-Dec-2",
-  "rate": "3.89"
+  "rate": "3.89",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1000198394
 }
