--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-2",
-  "rate": "3.89",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1000198394
+  "date": "2025-Dec-2",
+  "seed": 2019769407,
+  "rate": "3.89"
 }
