--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-2",
-  "seed": 2019769407,
-  "rate": "3.89"
+  "rate": "3.89",
+  "seed": 1549751990,
+  "date": "2025-Dec-2"
 }
