--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1783887729,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-2",
   "rate": "3.89",
-  "date": "2025-Dec-2"
+  "seed": 79374095,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
