--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-2",
-  "rate": "3.89",
-  "seed": 79374095,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-3",
+  "seed": 483231533,
+  "rate": "3.89"
 }
