--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.89",
-  "seed": 834584419,
   "date": "2025-Dec-3",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 243033999
 }
