--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Dec-3",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.89",
-  "seed": 460260111,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1342342406
 }
