--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.89",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-3",
-  "seed": 1834327165,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 697726824,
+  "rate": "3.89"
 }
