--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-3",
+  "seed": 1566365517,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.89",
-  "seed": 1750058324
+  "date": "2025-Dec-3"
 }
