--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-3",
-  "seed": 2006414658,
   "rate": "3.89",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2076469701,
+  "date": "2025-Dec-4"
 }
