--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.89",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2076469701,
-  "date": "2025-Dec-4"
+  "date": "2025-Dec-4",
+  "seed": 2104382668
 }
