--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1741718585,
+  "seed": 996467052,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-4",
-  "rate": "3.89",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.89"
 }
