--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2012722606,
   "date": "2025-Dec-4",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89"
+  "seed": 569193335,
+  "rate": "3.89",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
