--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Dec-4",
-  "rate": "3.89",
-  "seed": 1432337293,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 261924436,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.89"
 }
