--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1623353700,
+  "rate": "3.89",
   "date": "2025-Dec-4",
-  "seed": 261924436,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
