--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-5",
-  "rate": "3.89",
+  "seed": 905135539,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2121333257
+  "date": "2025-Dec-5",
+  "rate": "3.89"
 }
