--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Dec-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89",
-  "seed": 1135431910
+  "seed": 327190235,
+  "rate": "3.89"
 }
