--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-5",
+  "rate": "3.89",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 327190235,
-  "rate": "3.89"
+  "seed": 1782305291,
+  "date": "2025-Dec-5"
 }
