--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.89",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1782305291,
-  "date": "2025-Dec-5"
+  "date": "2025-Dec-5",
+  "seed": 345694081,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
