--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Dec-5",
-  "seed": 1639920676,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89"
+  "rate": "3.89",
+  "seed": 220064616
 }
