--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2092146737,
   "date": "2025-Dec-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89",
-  "seed": 220064616
+  "rate": "3.89"
 }
