--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1926395851,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.89",
+  "seed": 915131213,
   "date": "2025-Dec-5",
-  "rate": "3.89"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
