--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.89",
-  "seed": 915131213,
-  "date": "2025-Dec-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-8",
+  "seed": 1118852340
 }
