--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.89",
+  "seed": 132808022,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-8",
-  "seed": 1118852340
+  "rate": "3.89",
+  "date": "2025-Dec-8"
 }
