--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 132808022,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.89",
-  "date": "2025-Dec-8"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-8",
+  "seed": 1409702860
 }
