--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-8",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.89",
-  "seed": 950651700
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 994379909,
+  "date": "2025-Dec-8"
 }
