--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1750235759,
+  "date": "2025-Dec-8",
   "rate": "3.89",
-  "seed": 178416236,
-  "date": "2025-Dec-8"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
