--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.89",
+  "seed": 884160762,
   "date": "2025-Dec-8",
-  "seed": 239794547
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
