--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 83760258,
-  "rate": "3.89",
+  "seed": 551217650,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-8"
+  "date": "2025-Dec-8",
+  "rate": "3.89"
 }
