--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-9",
-  "seed": 1057654428,
+  "rate": "3.89",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89"
+  "seed": 293369748,
+  "date": "2025-Dec-9"
 }
