--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.89",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 293369748,
-  "date": "2025-Dec-9"
+  "date": "2025-Dec-9",
+  "seed": 2073996098,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
