--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1190714321,
   "rate": "3.89",
-  "date": "2025-Dec-9"
+  "date": "2025-Dec-9",
+  "seed": 1433601779
 }
