--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.89",
   "date": "2025-Dec-9",
+  "seed": 967391367,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2126569458
+  "rate": "3.89"
 }
