--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.89",
+  "seed": 337154848,
   "date": "2025-Dec-9",
-  "seed": 967391367,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.89"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
