--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-10",
-  "rate": "3.89",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 603156913
+  "rate": "3.89",
+  "seed": 366399404,
+  "date": "2025-Dec-10"
 }
