--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1514940406,
   "date": "2025-Dec-10",
-  "rate": "3.89"
+  "rate": "3.89",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2030316018
 }
