--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-10",
+  "seed": 2073775995,
   "rate": "3.89",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2030316018
+  "date": "2025-Dec-10",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
