--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-10",
   "rate": "3.89",
-  "seed": 271434482
+  "date": "2025-Dec-10",
+  "seed": 1113760494,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
