--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.89",
-  "date": "2025-Dec-10",
-  "seed": 1113760494,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64",
+  "seed": 534978373,
+  "date": "2025-Dec-11"
 }
