--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-11",
   "rate": "3.64",
-  "seed": 534978373,
-  "date": "2025-Dec-11"
+  "seed": 603122764,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
