--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 919620203,
   "rate": "3.64",
-  "date": "2025-Dec-11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1554306860,
+  "date": "2025-Dec-11"
 }
