--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
+  "seed": 1609667110,
   "date": "2025-Dec-11",
-  "seed": 1625537585
+  "rate": "3.64"
 }
