--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Dec-11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "seed": 1592416480,
-  "date": "2025-Dec-11"
+  "seed": 1258353047,
+  "rate": "3.64"
 }
