--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-11",
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1258353047,
-  "rate": "3.64"
+  "seed": 715377778,
+  "date": "2025-Dec-11"
 }
