--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 715377778,
-  "date": "2025-Dec-11"
+  "rate": "3.64",
+  "date": "2025-Dec-11",
+  "seed": 1665488197
 }
