--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1100148573,
+  "date": "2025-Dec-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "date": "2025-Dec-11",
-  "seed": 1665488197
+  "rate": "3.64"
 }
