--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1100148573,
-  "date": "2025-Dec-12",
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "seed": 1105921370,
+  "date": "2025-Dec-12"
 }
