--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1718366246,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-12",
-  "rate": "3.64"
+  "seed": 299964373
 }
