--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-12",
-  "seed": 299964373
+  "seed": 1497665594,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
