--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
+  "seed": 1094226200,
   "date": "2025-Dec-12",
-  "seed": 1105148147
+  "rate": "3.64"
 }
