--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 549686633,
+  "seed": 1031295125,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-12",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2025-Dec-12"
 }
