--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 230497826,
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-12"
+  "seed": 1144584253,
+  "date": "2025-Dec-12",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
