--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64",
   "date": "2025-Dec-15",
-  "seed": 945685199,
-  "rate": "3.64"
+  "seed": 314246210
 }
