--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
+  "seed": 2037670018,
   "date": "2025-Dec-15",
-  "seed": 314246210
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
