--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 128993696,
   "rate": "3.64",
-  "date": "2025-Dec-15"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-15",
+  "seed": 1685955643
 }
