--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-15",
-  "seed": 1685955643
+  "rate": "3.64",
+  "seed": 1476781032,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
