--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 841402814,
   "date": "2025-Dec-15",
-  "rate": "3.64",
-  "seed": 1476781032,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64"
 }
