--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 841402814,
+  "rate": "3.64",
   "date": "2025-Dec-15",
-  "rate": "3.64"
+  "seed": 1843901155,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
