--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1437385269,
   "date": "2025-Dec-15",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 460954278,
-  "rate": "3.64"
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
