--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 4877415,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "date": "2025-Dec-15"
+  "date": "2025-Dec-16",
+  "seed": 1348937205
 }
