--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
+  "seed": 997699981,
   "date": "2025-Dec-16",
-  "seed": 1348937205
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
