--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 383485368,
-  "date": "2025-Dec-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "seed": 2134670422,
+  "rate": "3.64",
+  "date": "2025-Dec-16"
 }
