--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1709675691,
-  "rate": "3.64"
+  "date": "2025-Dec-16",
+  "rate": "3.64",
+  "seed": 633745618
 }
