--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 747778887,
-  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-16",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64",
+  "seed": 1512788929
 }
