--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 319418261,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 992797249,
   "date": "2025-Dec-16",
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64"
 }
