--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 992797249,
+  "rate": "3.64",
   "date": "2025-Dec-16",
-  "rate": "3.64"
+  "seed": 366057184
 }
