--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
+  "seed": 493991850,
   "date": "2025-Dec-16",
-  "seed": 366057184
+  "rate": "3.64"
 }
