--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1428340281,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "seed": 510315624,
-  "date": "2025-Dec-16"
+  "date": "2025-Dec-17",
+  "rate": "3.64"
 }
