--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1428340281,
+  "seed": 1497280741,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-17",
-  "rate": "3.64"
+  "date": "2025-Dec-17"
 }
