--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "date": "2025-Dec-17",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1834304750
+  "rate": "3.64",
+  "seed": 946965769,
+  "date": "2025-Dec-17"
 }
