--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "seed": 1868770375,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-17",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64",
+  "seed": 385844524
 }
