--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-17",
   "rate": "3.64",
-  "seed": 93940837,
-  "date": "2025-Dec-17"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 720718804
 }
