--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-17",
-  "rate": "3.64",
+  "seed": 1625778246,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 720718804
+  "date": "2025-Dec-17",
+  "rate": "3.64"
 }
