--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Dec-17",
   "rate": "3.64",
-  "seed": 655254949,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-17"
+  "seed": 465681003,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
