--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-17",
   "rate": "3.64",
-  "seed": 465681003,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1674364371
 }
