--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Dec-18",
+  "seed": 573013397,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-17",
-  "rate": "3.64",
-  "seed": 1674364371
+  "rate": "3.64"
 }
