--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Dec-18",
+  "seed": 1617961232,
   "rate": "3.64",
-  "seed": 1532631447,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-18"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
