--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-18",
+  "rate": "3.64",
+  "seed": 1362368706,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1223070716,
-  "rate": "3.64"
+  "date": "2025-Dec-18"
 }
