--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "seed": 1362368706,
+  "date": "2025-Dec-18",
+  "seed": 1087560775,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-18"
+  "rate": "3.64"
 }
