--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1949589198,
+  "rate": "3.64",
   "date": "2025-Dec-18",
-  "seed": 1087560775,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
