--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1949589198,
   "rate": "3.64",
-  "date": "2025-Dec-18",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 159672479,
+  "date": "2025-Dec-18"
 }
