--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 159672479,
-  "date": "2025-Dec-18"
+  "seed": 141718296,
+  "date": "2025-Dec-18",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
