--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-18",
-  "seed": 524512090,
-  "rate": "3.64"
+  "seed": 1605334147,
+  "rate": "3.64",
+  "date": "2025-Dec-19"
 }
