--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1605334147,
+  "seed": 498902419,
   "rate": "3.64",
-  "date": "2025-Dec-19"
+  "date": "2025-Dec-19",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
