--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "date": "2025-Dec-19",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1355238348,
-  "date": "2025-Dec-19"
+  "rate": "3.64",
+  "seed": 1986442394
 }
