--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 464544865,
   "date": "2025-Dec-19",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "seed": 1986442394
+  "rate": "3.64"
 }
