--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-19",
-  "seed": 1206348669,
-  "rate": "3.64"
+  "seed": 780948605
 }
