--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-19",
-  "seed": 780948605
+  "seed": 2140845628,
+  "rate": "3.64"
 }
