--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-22",
+  "seed": 410308262,
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 244902114
+  "date": "2025-Dec-22",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
