--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1731040442,
   "rate": "3.64",
-  "date": "2025-Dec-22",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 544321286,
+  "date": "2025-Dec-22"
 }
