--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "date": "2025-Dec-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 255419081
+  "seed": 1409037804,
+  "date": "2025-Dec-22",
+  "rate": "3.64"
 }
