--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1409037804,
   "date": "2025-Dec-22",
-  "rate": "3.64"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64",
+  "seed": 1429208312
 }
