--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-22",
-  "rate": "3.64",
-  "seed": 487783945
+  "seed": 478006425,
+  "rate": "3.64"
 }
