--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1164966833,
   "date": "2025-Dec-22",
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 869227005
 }
