--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-22",
+  "seed": 529704614,
   "rate": "3.64",
-  "seed": 380972780,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Dec-22"
 }
