--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 529704614,
+  "date": "2025-Dec-22",
   "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-22"
+  "seed": 909202191
 }
